tests/testcases/errors/BCE0022-2.boo
"""
BCE0022-2.boo(7,20): BCE0022: Cannot convert 'int' to 'string'.
"""
class Person:
	Name as string:
		get:
			return 3

